[package]
name = "ActixBP"
version = "0.1.0"
authors = ["xvi <jrip03@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="3"
serde={version="1", features=["derive"]}
serde_json="1.0"
json="0.12"
dotenv="0.15.0"
env_logger="0.7"
futures = "0.3.6"
